# KO

./: README.md
coco/: sp-cc-o_91_hruskan1.tgz  sp-cc-r_29_hruskan1.tgz  sp-cc-t_100_hruskan1.tgz
hw1/: hw2_67_hruskan1.tgz  main.py
hw2/: main.py
hw3/: main.py
hw4/: main.py
hw5/: main.py
labs/: readme.txt
labs/catering/: catering_todo.ipynb
labs/gurobi-examples/__MACOSX/gurobi-examples/cpp/: ._example.cpp
labs/gurobi-examples/gurobi-examples/cpp/: CMakeLists.txt  example.cpp
labs/gurobi-examples/gurobi-examples/cpp/modules/: FindGUROBI.cmake
labs/gurobi-examples/gurobi-examples/java/: Example.java
labs/gurobi-examples/gurobi-examples/python/: example.py
labs/ilp_basics/: ILP basics.ipynb  lp_basics.nb
labs/ilp_basics/__MACOSX/: ._ILP basics.ipynb
labs/image_approximation_skeleton/: approximation_viz.py  czech_republic.txt
labs/image_reconstruction_jupyter/__MACOSX/image_reconstruction_jupyter/: ._mobile_input.txt
labs/image_reconstruction_jupyter/image_reconstruction_jupyter/: image_reconstruction.ipynb  mobile_input.txt
labs/nonograms/: Nonograms_todo.ipynb
labs/settle_up/: settle_up_todo.ipynb
theoretical_test/: BRUTE.html
theoretical_test/BRUTE_files/: bootstrap-select.css  bootstrap-switch.css  funkyradio.css  sou.css
